--- a/wercker.yml
+++ b/wercker.yml
@@ -4,6 +4,11 @@
 # If you want to use a specific version you would use a tag:
 # ruby:2.2.2
 box: ruby
+services:
+  - id: postgres
+    env:
+      POSTGRES_PASSWORD: meinefrau011280
+      POSTGRES_USER: marc
 # You can also use services such as databases. Read more on our dev center:
 # http://devcenter.wercker.com/docs/services/index.html
 # services:
